; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_zstreamtest.c_FUZ_rLogLength.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_zstreamtest.c_FUZ_rLogLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64)* @FUZ_rLogLength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FUZ_rLogLength(i64* %0, i64 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = shl i64 1, %6
  %8 = sub i64 %7, 1
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = add i64 %9, 1
  %11 = load i64*, i64** %3, align 8
  %12 = call i64 @FUZ_rand(i64* %11)
  %13 = load i64, i64* %5, align 8
  %14 = and i64 %12, %13
  %15 = add i64 %10, %14
  ret i64 %15
}

declare dso_local i64 @FUZ_rand(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
